# Multi-View-Fusion-Object-Detection-for-underwater-robotic-systems

./: .gitignore  Readme.md  left_points.json  right_points.json  stereo_calibration_launcher.py  triangulated_detections.json
scripts/: click_points_stereo.py  extract_same_frame.py  stereo_calibrate_from_videos.py  stereo_yolo_triangulation.py  triangulate_points.py
src/multicam_fusion_detector/: package.xml  setup.cfg  setup.py
src/multicam_fusion_detector/config/: params.yaml
src/multicam_fusion_detector/launch/: run.launch.py  video_publisher.py
src/multicam_fusion_detector/models/: uie_best.pt
src/multicam_fusion_detector/multicam_fusion_detector/: enhance_model.py  node.py  node_v1.py  video_publisher.py
