<?xml version="1.0"?>
<package format="3">
  <name>multicam_fusion_detector</name>
  <version>0.0.1</version>
  <description>Multi-camera enhancement + YOLO detection + late fusion</description>
  <maintainer email="shahid@example.com">shahid</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
